@@ -4919,6 +4919,25 @@
       ]
     },
     {
+      "name": "SetGamepadVibration",
+      "description": "Set gamepad vibration for both motors",
+      "returnType": "void",
+      "params": [
+        {
+          "type": "int",
+          "name": "gamepad"
+        },
+        {
+          "type": "float",
+          "name": "leftMotor"
+        },
+        {
+          "type": "float",
+          "name": "rightMotor"
+        }
+      ]
+    },
+    {
       "name": "IsMouseButtonPressed",
       "description": "Check if a mouse button has been pressed once",
       "returnType": "bool",
