@@ -167,6 +167,7 @@
     , "MAX_GAMEPADS" : "4"
     , "MAX_GAMEPAD_AXIS" : "8"
     , "MAX_GAMEPAD_BUTTONS" : "32"
+    , "MAX_GAMEPAD_VIBRATION_TIME" : "2.0"
     , "MAX_TOUCH_POINTS" : "8"
     , "MAX_KEY_PRESSED_QUEUE" : "16"
     , "MAX_CHAR_PRESSED_QUEUE" : "16"
